# cassette-inspector

./: README.md  gitignore  pyproject.toml
casetteai/: cli.py
casetteai/api/: main.py
cassetteai/: cli.py  config.py  pyproject.toml
cassetteai/api/: main.py  schemas.py
cassetteai/api/routes/: confirm.py  explain.py  inspect.py  predict.py  snapshot.py  status.py
cassetteai/bridge/: inspect.php
cassetteai/cassetteai.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
cassetteai/core/: __init__.py  camera.py  engineer.py  gradcam.py  inference.py  mapper.py
cassetteai/dashboard/static/css/: style.css
cassetteai/dashboard/static/js/: api.js  config.js  main.js  state.js
cassetteai/dashboard/static/js/actions/: inspectActions.js  reviewActions.js
cassetteai/dashboard/static/js/ui/: camera.js  comparison.js  gradcam.js  history.js  overlay.js  theme.js  toast.js
cassetteai/dashboard/templates/: index.html
cassetteai/db/: __init__.py  base.py  mysql.py  sqlite.py
script/: .gitignore  setup_structure.py
