[project]
name = "cassetteai"
version = "1.0.0"
description = "AI-based wafer cassette inspection tool for Trymax Semiconductor"
authors = [
    { name = "Anton Horvat" }
]
requires-python = ">=3.11"

dependencies = [
    # Backend
    "fastapi>=0.110.0",
    "uvicorn>=0.29.0",
    "python-multipart>=0.0.9",
    "jinja2>=3.1.0",

    # AI inference (PyTorch for v1 and v2)
    # Install the correct torch version for your machine from https://pytorch.org
    # For CPU only: pip install torch torchvision --index-url https://download.pytorch.org/whl/cpu
    "torchvision>=0.17.0",

    # Grad-CAM
    "grad-cam>=1.5.0",

    # Camera
    "opencv-python>=4.9.0",

    # Data
    "pandas>=2.0.0",
    "numpy>=1.26.0",

    # Pydantic (used by FastAPI for request/response models)
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
# Level 2 only. Install these when switching to MySQL.
mysql = [
    "mysql-connector-python>=8.3.0",
]

# ONNX runtime for v3 when the slot classifier moves to YOLO.
onnx = [
    "onnxruntime>=1.17.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends.legacy:build"

[tool.setuptools.packages.find]
where = ["."]
include = ["api*", "core*", "db*", "dashboard*", "bridge*"]
